fix jumping axis, fix infraorder rectangle issue

--- a/src/vis/style.css
+++ b/src/vis/style.css
@@ -9,6 +9,7 @@ pre { width: 100%; height: 100%; font-size: 10px; overflow-y: scroll; }
     top: 0;
     height: 50px;
 }
+#plot.sticky_plot{margin-top: 0px;}
 text {
     font-family: "Helvetica Neue", Helvetica, sans-serif;
     fill: #000;
